

=== Version 0.6 ===
dev

; Compatibility changes

* The tests can now run independently of MediaWiki
* The tests now require PHPUnit 3.7 or later

; Additions

* Added phpunit.php runner in the tests directory
* Added Diff\Comparer\ValueComparer interface with CallbackComparer and StrictComparer implementations
* Added MapPatcher::setValueComparer to facilitate patching maps containing objects

; Removals

* GenericArrayObject has been removed from this package.
  Diff derives from ArrayObject rather than GenericArrayObject.
  Its interface has not changed expect for the points below.
* The getObjectType method in Diff (previously defined in GenericArrayObject)
  is now private rather than public.
* Adding a non-DiffOp element to a Diff will now result in an InvalidArgumentException
  rather than a MWException.
* Removed Diff\Exception

=== Version 0.5 ===
2013-02-26

; Additions

* Added DiffOpFactory
* Added DiffOp::toArray
* Added CallbackListDiffer
* Added MapDiffer::setComparisonCallback

; Deprecations

* Hard deprecated ListDiff, MapDiff and IDiff

; Removals

* Removed Diff::getApplicableDiff

=== Version 0.4 ===
2013-01-08

; Additions

* Split off diffing code from MapDiff and ListDiff to dedicated Differ classes
* Added dedicated Patcher classes, which are used for the getApplicableDiff functionality

; Deprecations

* Deprecated ListDiff:newFromArrays and MapDiff::newFromArrays
* Deprecated ListDiff::newEmpty and MapDiff::newEmpty
* Deprecated Diff::getApplicableDiff
* Soft deprecated DiffOp interface in favour of DiffOp
* Soft deprecated IDiff interface in favour of Diff
* Soft deprecated MapDiff and ListDiff in favour of Diff

; Removals

* Removed parentKey functionality from Diff
* Removed constructor from Diff interface
* Removed Diff::newEmpty

=== Version 0.3 ===
2012-11-21

* Improved entry point and setup code. Diff.php is now the main entry point for both MW extension and standalone library