@@ -1,0 +1,15 @@
+<?php
+
+/**
+ * PHPUnit test bootstrap file for the Diff library.
+ *
+ * @since 0.6
+ *
+ * @file
+ * @ingroup Diff
+ *
+ * @licence GNU GPL v2+
+ * @author Jeroen De Dauw < jeroendedauw@gmail.com >
+ */
+
+require_once( __DIR__ . '/../Diff.php' );
