@@ -10,13 +10,19 @@ if ( PHPUnit_Runner_Version::id() !== '@package_version@'
 
 require_once( 'PHPUnit/Autoload.php' );
 
-require_once( __DIR__ . '/../Diff.php' );
+require_once( __DIR__ . '/bootstrap.php' );
+
+echo 'Running tests for Diff version ' . Diff_VERSION . ".\n";
+
+$arguments = $_SERVER['argv'];
+array_shift( $arguments );
+
+if ( array_search( '--group', $arguments ) === false ) {
+	$arguments[] = '--group';
+	$arguments[] = 'Diff';
+}
+
+$arguments[] = __DIR__;
 
 $runner = new PHPUnit_TextUI_Command();
-
-$runner->run( array(
-   __FILE__,
-   '--group',
-   'Diff',
-   __DIR__
-) );
+$runner->run( $arguments );
